[package]
name = "async-priority-limiter"
version = "0.1.0"
edition = "2024"
license = "ISC"

[dependencies]
async-throttle = "0.3.2"
flume = "0.11.1"
futures = "0.3.31"
httpdate = { version = "1.0.3", optional = true }
humantime = { version = "2.2.0", optional = true }
reqwest = { version = "0.12.15", optional = true }
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
mockito = "1.7.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15" }

[features]
reqwest = ["dep:reqwest", "dep:httpdate"]
open_ai = ["reqwest", "dep:humantime"]
