[package]
name = "async-priority-limiter"
version = "0.3.0"
edition = "2024"
description = "Throttles prioritised tasks by limiting the max concurrent tasks and minimum time between tasks, with up to two levels based on keys"
license = "ISC"
repository = "https://github.com/StefanTerdell/async-priority-limiter-rs/"
keywords = [
  "priority",
  "rate-limit",
  "trottle",
  "async",
  "queue",
]

[dependencies]
flume = "0.11.1"
httpdate = { version = "1.0.3", optional = true }
humantime = { version = "2.2.0", optional = true }
reqwest = { version = "0.12.15", optional = true }
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
futures = "0.3.31"
mockito = "1.7.0"
reqwest = { version = "0.12.15" }
tokio-test = "0.4.4"

[features]
reqwest = ["dep:reqwest", "dep:httpdate"]
open_ai = ["reqwest", "dep:humantime"]
